# ouster-gazebo-simulation

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
launch/: os1_64_alone.launch
meshes/: os1_64.stl
ouster_gazebo_plugins/: package.xml
ouster_gazebo_plugins/src/: GazeboRosOusterLaser.cpp
ouster_os1_64/: CMakeLists.txt  package.xml
ouster_os1_64/meshes/: os1_64.dae  os1_64_reduced.dae
ouster_os1_64/tests/: test_ouster.py
ouster_os1_64/urdf/: example_robot.urdf.xacro  os1_64.urdf.xacro
src/: GazeboRosOusterLaser.cpp
