<?xml version="1.0"?>
<package format="2">
  <name>ouster_os1_64</name>
  <version>0.0.1</version>
  <description>
    Package for the simulation of the Lidar Ouster OS1-64.
  </description>

  <license>TODO</license>

  <author email="tlasguigne@laas.fr">Thibaud Lasguignes</author>
  <maintainer email="tlasguigne@laas.fr">Thibaud Lasguignes</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

</package>
